Bug 50983 - HTML mail does not honor minimum font sizes
Summary: HTML mail does not honor minimum font sizes
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: GUI (other bugs)
Version First Reported In: 1.10.0
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Stephan Kulow
URL:
Keywords: triaged
: 53513 53733 73640 (view as bug list)
Depends on:
Blocks:
 
Reported: 2002-11-20 21:24 UTC by Carl Thompson
Modified: 2011-09-08 00:08 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carl Thompson 2002-11-20 21:24:39 UTC
Version:            (using KDE KDE 3.0.99)
Installed from:    Compiled From Sources
Compiler:          gcc 3.2 
OS:          Linux

HTML mail in kmail does not honor the konqueror setting for
minimum font size in displayed HTML.  Kmail should probably
just use this setting or allow the user to specify the minimum
font size in some other way.
Comment 1 Carl Thompson 2003-08-03 20:52:13 UTC
It has been more than 7 months since this bug was reported and there has been 
no response at all, not even to assign the bug.  Do the KMail developers read 
these bug reports? 
 
This problem is verified to still exist in the current KDE 3.1.3. 
 
Comment 2 Till Adam 2003-08-03 21:26:13 UTC
Carl, thank you for your report. They are read, and worked on, but at roughly 350 non-
wishlist bug reports open, some of them crashes, you'll have to cut us some slack if 
issues such as yours which, annoying as it might be for you, is comparatively minor, do 
take some time to get fixed. Feel free to pitch in, for example by looking at new bug 
reports, finding duplicates, writing nice little responses asking folks for patience. Such 
as this one. :) 
Comment 3 Carl Thompson 2003-08-03 22:35:12 UTC
It is annoying for me, but for people with visual impairments, it is problably 
not relatively minor!  Sure most people see fine, but I believe that KDE 
should be accessible to those that don't... 
Comment 4 Till Adam 2003-08-03 22:54:05 UTC
Carl, coincidentally I am visually impaired myself. I work with very large fonts, which is 
possible with kmail, thankfully, and looks much better than my 80 character konsole I 
used to blow up to the full 1600 pixel of my laptop when I still used mutt. ;) I do get a 
certain percentage of html mail the vast majority of which is spam. Of the rest there is 
indeed the odd one that has very small fonts and resists all attempts to increase the 
font size. Each time I get one of these, I think, geeze, it'd be nice if that one got fixed 
one of these days, and disable html rendering. It hasn't annoyed me enough to motivate 
me to fix it yet. Does it annoy you enough to motivate you to fix it? Your patch would be 
gladly accepted. 
Comment 5 Don Sanders 2003-08-04 08:16:27 UTC
Subject: Re:  HTML mail does not honor minimum font sizes

> ------- Additional Comments From till@adam-lilienthal.de
<cut> 
> . Does it annoy you enough to motivate you to fix it?
> Your patch would be gladly accepted.

Another option is to vote for this bug and get your friends to do the 
same, see http://kontact.org/votes

I plan to concentrate on the top bugs/features by vote, currently I'm 
making progress on 4202 and 50997.

Don.

Comment 6 Stephan Kulow 2003-09-20 10:50:04 UTC
Just put that into .kde/share/config/kmailrc 
 
[HTML Settings] 
MinimumFontSize=16 
 
the GUI for it will have to wait I'm afraid. Simply taking over konqueror's option 
would be broken I guess.  
BTW: this sets the minimum font size for all of kmail's reader, not just for HTML 
messages. 
Comment 7 Stephan Kulow 2003-09-21 15:10:54 UTC
*** Bug 53513 has been marked as a duplicate of this bug. ***
Comment 8 Marco Paganini 2003-09-25 04:58:47 UTC
>Just put that into .kde/share/config/kmailrc
>[HTML Settings]
>MinimumFontSize=16 

This is so good it brought tears of joy out of my eyes. I've been looking for
this for a long time and now I finally found it. Thanks to you, now I'll be able
to communicate with all the bozos who insist on sending html mail with
ridiculously small fonts! :)

Seriously now, thanks. :)
Comment 9 Stephan Kulow 2003-09-27 11:15:12 UTC
*** Bug 53733 has been marked as a duplicate of this bug. ***
Comment 10 Stephan Kulow 2004-01-27 21:24:20 UTC
*** Bug 73640 has been marked as a duplicate of this bug. ***
Comment 11 Roland Schulz 2004-01-27 21:39:39 UTC
Why do you think, that taking the konqueror options would be a broken design? Since you can change the konqueror options also in KControl they aren't (/don't feel) application specific. And I think the konqueror dialog has exactly the options we need in kmail, too.
Comment 12 Jose Hernandez 2004-02-22 19:31:15 UTC
Adding some votes. I get daily HTML digests that use small fonts. I'd really like to see them, too. ;)
Comment 13 Helge Hielscher 2004-04-27 15:12:47 UTC
see also bug 59576
Comment 14 Gilles Schintgen 2005-03-17 20:59:54 UTC
Nearly 2 years 4 months and counting ;-)
Seriously though, why doesn't KHTML by itself honor this setting. I've just filed the same report for the Control Center in 3.4 (Bug 101730). I'd guess that setting such a minimum font size is a deliberate action showing that smaller font sizes are unwanted (at least for longer text passages). Therefore it may perhaps make sense to reassign this to KHTML in general. Or am I missing something?
Comment 15 Moshe Caspi 2005-07-07 16:03:32 UTC
"Another option is to vote for this bug and get your friends to do the 
 same, see http://kontact.org/votes 
 
 I plan to concentrate on the top bugs/features by vote, currently I'm 
 making progress on 4202 and 50997. 
 
 Don."

My opinion is that your thinking is wrong. You are forgetting KDE users that do not read these messages. They are simple users who are not interested in bug messages. I think that KDE developers should concentrate on what KDE thinks would annoy most users (voters and non-voters) and not bugs with the most votes. Just my opinion. 
Comment 16 Carl Thompson 2006-07-14 16:45:47 UTC
Stephan Kulow wrote:  
> Just put that into .kde/share/config/kmailrc
>
>  [HTML Settings]
>  MinimumFontSize=16
>
> the GUI for it will have to wait I'm afraid. Simply taking
> over konqueror's option would be broken I guess. BTW: this
> sets the minimum font size for all of kmail's reader, not
> just for HTML messages. 

Doesn't seem to work under 3.5.3... Is there still no way to
do this?
Comment 17 Jaime Torres 2008-08-30 12:12:34 UTC
In kmail 1.10.0 (kde 4.1) the configuration in 
kde/share/config/kmailrc [
HTML Settings] 
MinimumFontSize=16 

works, but there is still no GUI for configuring it.
Comment 18 Laurent Montel 2011-09-07 17:38:12 UTC
Git commit 4b60119ceb6602c89d0e0070dda136fe0c1bce17 by Montel Laurent.
Committed on 07/09/2011 at 19:37.
Pushed by mlaurent into branch 'master'.

Fix very old bug Bug 50983 - HTML mail does not honor minimum font sizes

FIXED-IN: 4.8
BUG: 50983

M  +4    -0    messageviewer/messageviewer.kcfg.cmake
M  +28   -10   messageviewer/settings.ui
M  +5    -0    messageviewer/viewer_p.cpp

http://commits.kde.org/kdepim/4b60119ceb6602c89d0e0070dda136fe0c1bce17
Comment 19 Carl Thompson 2011-09-08 00:08:12 UTC
Wow. 9 years for a simple accessibility fix. I think perhaps the devs' priorities do not match those of KDE's current (and former) regular users. Well, thanks for the fix. A decade is not too bad when it's free!