Fix very old bug Bug 50983 - HTML mail does not honor minimum font sizes

FIXED-IN: 4.8
BUG: 50983