messageviewer/messageviewer.kcfg.cmake
@@ -11,6 +11,10 @@ xsi:schemaLocation="http://www.kde.org/standards/kcfg/1.0 http://www.kde.org/sta
     <entry name="FixedFont" type="Font" key="fixed-font">
       <default code="true">KGlobalSettings::fixedFont()</default>
     </entry>
+    <entry name="MinimumFontSize" type="Int">
+      <label>When we render html do not use font size inferior to minimum size.</label>
+      <default>8</default>
+    </entry>
   </group>
 
   <group name="Reader">
